--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,40 @@
+alembic==1.5.8
 amqp==5.0.5
 bcrypt==3.1.7
 billiard==3.6.3.0
 celery==5.0.5
 cffi==1.14.5
 Click==7.0
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
+Flask-Dropzone==1.5.4
+Flask-Login==0.5.0
+Flask-Migrate==2.7.0
+flask-msearch==0.2.9.1
+Flask-Reuploaded==1.0.0
 Flask-SQLAlchemy==2.5.1
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.3
+greenlet==1.0.0
+gunicorn==20.1.0
+itsdangerous==1.1.0
 Jinja2==2.11.3
 kombu==5.0.2
+Mako==1.1.4
 MarkupSafe==1.1.1
 pdfkit==0.6.1
+prompt-toolkit==3.0.18
 pycparser==2.19
+python-dateutil==2.8.1
+python-editor==1.0.4
 pytz==2019.3
 six==1.14.0
 SQLAlchemy==1.4.3
 vine==5.0.0
+wcwidth==0.2.5
+Werkzeug==1.0.1
 wkhtmltopdf==0.2
 WTForms==2.2.1
-Flask-Migrate==2.7.0
